--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "this is assignment problem of stock",
   "main": "dist/index.js",
   "scripts": {
+    "test": "jest",
     "dev": "NODE_ENV=development nodemon",
     "build": "tsc && tsc-alias",
     "build:swc": "swc src -d dist --copy-files",
@@ -35,14 +36,17 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.16",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.6.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.1.2",
