--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,19 +21,11 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"],
-      "@config/*": ["config/*"],
       "@controllers/*": ["controllers/*"],
-      "@databases/*": ["databases/*"],
-      "@dtos/*": ["dtos/*"],
-      "@exceptions/*": ["exceptions/*"],
-      "@interfaces/*": ["interfaces/*"],
-      "@middlewares/*": ["middlewares/*"],
-      "@models/*": ["models/*"],
       "@routers/*": ["routers/*"],
-      "@services/*": ["services/*"],
       "@utils/*": ["utils/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.json", ".env"],
-  "exclude": ["node_modules", "src/http", "src/logs", "src/tests"]
+  "exclude": ["node_modules", "src/test"]
 }
