adding service folder for more split function

--- a/.swcrc
+++ b/.swcrc
@@ -24,7 +24,8 @@
       "@config": ["config/*"],
       "@controllers/*": ["controllers/*"],
       "@routers/*": ["routers/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@services/*": ["services/*"]
     }
   },
   "module": {
